# to-your-face-reloaded

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  release.ps1  vcpkg.json
cmake/: Plugin.h.in  version.rc.in
config/: to-your-face-reloaded.ini  to_your_face.ini
reference-src/: ToYourFace.cpp  ToYourFace.vcxproj
src/: CMakeLists.txt  CommentFilter.cpp  CommentFilter.h  Config.cpp  Config.h  Hook.cpp  Hook.h  Main.cpp  PCH.h  PatternScanning.cpp  PatternScanning.h
